--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -1,49 +1,91 @@
 ---
-title: Overview and Concept
+title: Overview
 ---
 
-KlickerUZH integrates a comprehensive gamification framework throughout the application, designed to enhance student motivation and engagement. Participants can create personalized avatars and collect points for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different leaderboards, fostering a sense of achievement and driving students to improve their performance.
-
-The gamification system extends beyond individual competition and also promotes collaboration. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and achievements are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
-
-KlickerUZH's gamification features are designed to provide immediate feedback and recognition, helping students track their progress over time and stay motivated. On top of course-specific points, students also collect experience points that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
-
 :::info
-For a more detailed overview of the gamification features, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
+This part of our documentation is work in progress and will be continuously extended with more details. For a more detailed overview of specific implementation details, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
 :::
 
-## Gamified Activities and Competition
+KlickerUZH integrates a comprehensive **gamification framework** throughout the application, designed to enhance student **motivation** and **engagement**. Participants can create **personalized avatars** and collect **points** for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different **leaderboards**, fostering a sense of achievement and driving students to improve their performance.
 
-All KlickerUZH activities have gamification built into their core. While gamification remains optional in most activities, it is automatically enabled when an activity is integrated into a gamified course, requiring no additional setup from lecturers. For more information on the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
+The gamification system extends beyond individual competition and also promotes **collaboration**. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and **achievements** are awarded for successful completion. This dual approach of individual and group challenges creates a **well-rounded learning experience** that caters to different learning styles and preferences.
 
-In gamified live quizzes, students receive points for answering questions and additional bonus points, if a sample solution has been provided and the entered response is correct. The synchronous setup of live quizzes allows for a grading system where the first correct answer receives the highest number of bonus points, with a subsequent linear decrease over time. Once a live quiz block is closed, students can see their ranking on the live quiz leaderboard. At the end of each quiz, students automatically receive achievements for first, second, and third place, and the collected points are transferred to the course leaderboard.
-
-In practice quizzes and microlearnings students receive points and experience points based on the correctness of their answers. Collected points are displayed on the course leaderboard, while experience points are available across courses and are linked to the user level on their profile view.
-
-## Groups and Collaboration
-
-KlickerUZH features group activities to promote collaboration alongside competition. By completing group activities, students can earn group points, which are added to their average member scores and displayed on a separate group leaderboard within the course overview. Collaboration is encouraged through the distribution of hints among group members, which are necessary to solve the posed questions. The random group creation feature enables lecturers to conduct group activities in large lecture settings where students may not know each other beforehand.
-
-In addition to points, students receive achievements for completing and successfully solving group activities. These achievements and the number of times they have been earned are displayed on the student profile view.
-
-## Participant Experience
-
-Students using KlickerUZH's gamified elements can:
-
-- Create personalized avatars
-- Earn points and experience points (XP) through various learning activities
-- Track their individual performance and ranking within courses
-- Collaborate in groups and participate in group challenges
-- Progress through levels as they accumulate XP
-- Engage in friendly competition through leaderboards
+KlickerUZH's gamification features provide **immediate feedback** and recognition, helping students track their progress over time and stay motivated. In addition to course-specific points, students also collect **experience points** that span across courses, allowing for **long-term progression** and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
 
 ## Goals of Gamification
 
-The gamification features in KlickerUZH are designed to work together to create an engaging and effective learning experience for students while providing lecturers with tools to enhance their teaching methods:
+The **gamification features** in KlickerUZH are designed to **enhance the learning experience** for students while providing lecturers with additional tools to support their teaching methods. Our aim is to make learning more **engaging**, **interactive**, and **rewarding** for students in higher education settings.
 
-- Enhance engagement and motivation
-- Encourage active participation and involvement in the learning process
-- Create a dynamic and immersive learning environment
-- Provide opportunities for healthy competition
-- Offer immediate feedback, rewards, and recognition for accomplishments
-- Support students' progress and growth throughout their learning journey
+We seek to create an environment where students **actively participate** in their educational journey, rather than passively receiving information. By incorporating **game-like elements**, we hope to tap into students' **intrinsic motivation**, foster a sense of **achievement**, and create a more **enjoyable learning experience**.
+
+The primary goals of our gamification approach include:
+
+- Increasing student **engagement** and **motivation**
+- Encouraging **active participation** in lectures and coursework
+- Creating a more **dynamic learning environment**
+- Providing opportunities for **constructive competition**
+
+Additionally, we aim to:
+
+- Offer **timely feedback** and **recognition** for accomplishments
+- Support students' **progress** throughout their courses
+- Encourage **collaboration** and a sense of **community** among learners
+
+By implementing these strategies, we hope to make **complex subjects** more **approachable** and less daunting for students. This approach may help increase **retention of knowledge** through repeated engagement and reinforcement, potentially fostering a more **positive association** with the learning process in higher education.
+
+## Gamified Activities and Competition
+
+KlickerUZH incorporates **gamification elements** into all its activities, enhancing student engagement and motivation. While gamification is **optional** for most activities, it is automatically activated in **gamified courses**, streamlining the process for lecturers. For a deeper understanding of the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
+
+**Gamified live quizzes** offer students:
+
+- Points for **active participation** in answering questions
+- **Bonus points** for swift and accurate responses (when solutions are provided)
+- **Rankings** on the live quiz leaderboard upon completion of each quiz block
+- **Achievements** for securing first, second, and third positions at the quiz's conclusion
+
+The real-time nature of live quizzes enables a **dynamic scoring system**, rewarding the first correct answer with the highest bonus points, followed by a gradual decrease over time.
+
+**Practice quizzes** and **microlearnings** allow students to:
+
+- Earn points based on answer accuracy (reflected on the course leaderboard)
+- Accumulate experience points (applicable across courses and tied to their profile level)
+
+These gamified features aim to create a more **interactive** and **rewarding** learning environment, encouraging consistent engagement and fostering a sense of achievement among students.
+
+## Groups and Collaboration
+
+KlickerUZH features **group activities** to promote collaboration alongside competition. This aspect of the gamification framework is designed to foster teamwork and enhance the learning experience through peer interaction. Group activities are an integral part of the gamified course structure and can be easily integrated by lecturers.
+
+In **group activities**, students can:
+
+- Form or join **groups** within their courses
+- Earn **group points** by completing collaborative tasks
+- View their group's ranking on a separate **group leaderboard** within the course overview
+- Collaborate more effectively through **distributed hints** among group members
+- Participate in **randomly created groups** for large lecture settings, promoting diverse interactions
+
+The benefits of group activities include:
+
+- Encouraging **peer learning** and knowledge sharing
+- Developing **communication** and **teamwork** skills
+- Providing a **balanced approach** to individual and collaborative learning
+- Offering a **different perspective** on course material through group discussions
+
+Students receive **achievements** for completing and successfully solving group activities, which are displayed on their profile view along with the number of times earned. These achievements serve as recognition for collaborative efforts and successful teamwork.
+
+The group activities in KlickerUZH are designed to complement individual learning experiences, creating a well-rounded educational environment that prepares students for real-world scenarios where collaboration is key. By incorporating both competitive and collaborative elements, KlickerUZH aims to cater to diverse learning preferences and enhance overall student engagement.
+
+## Participant Experience
+
+KlickerUZH offers a rich and engaging experience for students through its gamified elements. Participants can:
+
+- Create **personalized avatars** to represent themselves in the platform
+- Earn **points** for answering questions correctly in various activities
+- Accumulate **experience points (XP)** that span across courses, allowing for long-term progression
+- Track their **individual performance** and ranking within specific courses
+- **Collaborate** in groups and participate in challenging group activities
+- **Progress** through levels as they accumulate XP, providing a sense of achievement and growth
+- Engage in friendly **competition** through multiple leaderboards (course-specific and overall)
+
+Students can view their **achievements**, **points**, and **rankings** on their personal profile page, allowing them to see their progress at a glance. The gamification features in KlickerUZH are designed to provide **immediate feedback** and recognition, helping students stay motivated and track their progress over time.
