group activity inconsistency

--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -60,9 +60,9 @@ KlickerUZH features **group activities** to promote collaboration alongside comp
 In **group activities**, students can:
 
 - Form or join **groups** within their courses
+- Collaborate on solving group activities based on a set of questions and **distributed hints** among group members
 - Earn **group points** by completing collaborative tasks
 - View their group's ranking on a separate **group leaderboard** within the course overview
-- Collaborate more effectively through **distributed hints** among group members
 - Participate in **randomly created groups** for large lecture settings, promoting diverse interactions
 
 The benefits of group activities include:
