--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -6,38 +6,36 @@ title: Overview
 This part of our documentation is work in progress and will be continuously extended with more details. For a more detailed overview of specific implementation details, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
 :::
 
-KlickerUZH integrates a comprehensive **gamification framework** throughout the application, designed to enhance student **motivation** and **engagement**. Participants can create **personalized avatars** and collect **points** for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different **leaderboards**, fostering a sense of achievement and driving students to improve their performance.
+KlickerUZH integrates a comprehensive gamification framework throughout the application, designed to enhance student **motivation** and **engagement**. Participants can create personalized avatars and collect **points** for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different **leaderboards**, fostering a sense of achievement and driving students to improve their performance.
 
-The gamification system extends beyond individual competition and also promotes **collaboration**. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and **achievements** are awarded for successful completion. This dual approach of individual and group challenges creates a **well-rounded learning experience** that caters to different learning styles and preferences.
+At the same time, the gamification system extends beyond individual competition and also promotes **collaboration**. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and **achievements** are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
 
-KlickerUZH's gamification features provide **immediate feedback** and recognition, helping students track their progress over time and stay motivated. In addition to course-specific points, students also collect **experience points** that span across courses, allowing for **long-term progression** and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
+KlickerUZH's gamification features provide immediate feedback and recognition, helping students track their progress over time and stay motivated. In addition to course-specific points, students also collect **experience points** that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
 
 ## Goals of Gamification
 
-The **gamification features** in KlickerUZH are designed to **enhance the learning experience** for students while providing lecturers with additional tools to support their teaching methods. Our aim is to make learning more **engaging**, **interactive**, and **rewarding** for students in higher education settings.
-
-We seek to create an environment where students **actively participate** in their educational journey, rather than passively receiving information. By incorporating **game-like elements**, we hope to tap into students' **intrinsic motivation**, foster a sense of **achievement**, and create a more **enjoyable learning experience**.
+The gamification features in KlickerUZH are designed to enhance the learning experience for students while providing lecturers with additional tools to support their teaching methods. Our aim is to make learning more engaging, interactive, and rewarding in higher education settings. Therefore, KlickerUZH tries to create an environment where students actively participate in their educational tenure, rather than only passively receiving information.
 
 The primary goals of our gamification approach include:
 
 - Increasing student **engagement** and **motivation**
 - Encouraging **active participation** in lectures and coursework
 - Creating a more **dynamic learning environment**
-- Providing opportunities for **constructive competition**
+- Providing opportunities for **constructive competition** and promoting **collaboration**
 
-Additionally, we aim to:
+Additionally, we also aim to:
 
-- Offer **timely feedback** and **recognition** for accomplishments
-- Support students' **progress** throughout their courses
-- Encourage **collaboration** and a sense of **community** among learners
+- Offer timely feedback and recognition for accomplishments
+- Support students' progress throughout their courses
+- Encourage collaboration and a sense of community among learners
 
-By implementing these strategies, we hope to make **complex subjects** more **approachable** and less daunting for students. This approach may help increase **retention of knowledge** through repeated engagement and reinforcement, potentially fostering a more **positive association** with the learning process in higher education.
+By implementing these strategies, we hope to make complex subjects more approachable and improve the **retention of knowledge** through repeated engagement and reinforcement.
 
 ## Gamified Activities and Competition
 
-KlickerUZH incorporates **gamification elements** into all its activities, enhancing student engagement and motivation. While gamification is **optional** for most activities, it is automatically activated in **gamified courses**, streamlining the process for lecturers. For a deeper understanding of the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
+KlickerUZH incorporates gamification elements into all its activities, enhancing student engagement and motivation. While gamification is optional for most activities, it is automatically activated in gamified courses, streamlining the process for lecturers. For a deeper understanding of the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
 
-**Gamified live quizzes** offer students:
+Gamified **live quizzes** offer students:
 
 - Points for **active participation** in answering questions
 - **Bonus points** for swift and accurate responses (when solutions are provided)
@@ -50,8 +48,6 @@ The real-time nature of live quizzes enables a **dynamic scoring system**, rewar
 
 - Earn points based on answer accuracy (reflected on the course leaderboard)
 - Accumulate experience points (applicable across courses and tied to their profile level)
-
-These gamified features aim to create a more **interactive** and **rewarding** learning environment, encouraging consistent engagement and fostering a sense of achievement among students.
 
 ## Groups and Collaboration
 
@@ -88,4 +84,4 @@ KlickerUZH offers a rich and engaging experience for students through its gamifi
 - **Progress** through levels as they accumulate XP, providing a sense of achievement and growth
 - Engage in friendly **competition** through multiple leaderboards (course-specific and overall)
 
-Students can view their **achievements**, **points**, and **rankings** on their personal profile page, allowing them to see their progress at a glance. The gamification features in KlickerUZH are designed to provide **immediate feedback** and recognition, helping students stay motivated and track their progress over time.
+Students can view their achievements, points, and rankings on their personal profile page, allowing them to see their progress at a glance. The gamification features in KlickerUZH are designed to provide immediate feedback and recognition, helping students stay motivated and track their progress over time.
