chore: update docs and highlighting therein

--- a/apps/docs/docs/getting_started/welcome.mdx
+++ b/apps/docs/docs/getting_started/welcome.mdx
@@ -8,7 +8,7 @@ The platform is being developed by the **Teaching Center** of the **Department o
 
 ## User Guide
 
-To learn how to use the KlickerUZH efficiently, we recommend you get familiar with the **core concepts** and work through the **tutorials**. These tutorials have been created to guide you through the entire application by means of examples. KlickerUZH also offers a number of **use cases in university teaching** that allow lecturers to achieve different goals depending on their needs. To help you decide which use case best suits your purpose, you will find a selection in the [Use Cases](/use_cases) area of the documentation.
+To learn how to use the KlickerUZH efficiently, we recommend you get familiar with the [**core concepts**](/getting_started/core_concepts/) and work through the [**tutorials**](/tutorials/supported_element_types/). These tutorials have been created to guide you through the entire application by means of examples. KlickerUZH also offers a number of **use cases in university teaching** that allow lecturers to achieve different goals depending on their needs. To help you decide which use case best suits your purpose, you will find a selection in the [Use Cases](/use_cases) area of the documentation.
 
 :::info
 In case of any questions, please have a look if your problem has already been described in the FAQ. For further support, please feel free to connect with us in our [community](https://www.community.klicker.uzh.ch) or through the other channels as described below.
@@ -16,7 +16,7 @@ In case of any questions, please have a look if your problem has already been de
 
 ## Official KlickerUZH
 
-The official instance of KlickerUZH (**www.klicker.uzh.ch**) is provided by the Department of Finance of the University of Zurich. The application and its dependencies are hosted on **Microsoft Azure** and within **Europe**. Data processing is outlined further in our [Privacy Policy](/privacy_policy).
+The official instance of KlickerUZH (**www.klicker.uzh.ch**) is provided by the Department of Finance of the University of Zurich. The application and its dependencies are hosted on Microsoft Azure and within Europe. Data processing is outlined further in our [Privacy Policy](/privacy_policy).
 
 - Core functionalities (element library, live quiz, course management, gamification) are **freely accessible** for anyone logging in to our public instance. We always reserve the right of restricting usage over a "fair" amount so that usage for other users is not restricted.
 - Advanced features require participation in our **Catalyst program** (see [Catalyst](/catalyst) for more information).
@@ -30,16 +30,16 @@ Instead of using the publicly hosted version of the application (the official "K
 **Important:** You are required, as reinforced by the AGPL license, that any extensions of self-hosted instances be provided as open-source as well (as is good open-source spirit).
 :::
 
-To deploy a private KlickerUZH instance, we strongly recommend that you first familiarize yourself with the **architecture of the application** on our GitHub project. Feel free to get in touch in our community if there are any questions or issues regarding deployment.
+To deploy a private KlickerUZH instance, we strongly recommend that you first familiarize yourself with the architecture of the application on our GitHub project. Feel free to get in touch in our community if there are any questions or issues regarding deployment.
 
 ## Contributing
 
-In the spirit of open source, we welcome any good-spirited contributions to the KlickerUZH (be it from institutions or individuals). It is generally a good idea to first get an orientation about the general direction of the project from the **Roadmap**.
+In the spirit of open source, we welcome any good-spirited contributions to the KlickerUZH (be it from institutions or individuals). It is generally a good idea to first get an orientation about the general direction of the project from the [**Roadmap**](/development).
 
 **Steps for contributing:**
 
 1. Create an issue or discussion on the [klicker-uzh](https://github.com/uzh-bf/klicker-uzh) project if you are unsure about your idea or the next steps to its implementation.
-2. Follow our **Contributing Guidelines** to ensure your contribution is accepted.
+2. Follow our Contributing Guidelines to ensure your contribution is accepted.
 
 ## Support & Community
 
