--- a/apps/docs/docs/student_tutorials/student_accounts.mdx
+++ b/apps/docs/docs/student_tutorials/student_accounts.mdx
@@ -2,7 +2,7 @@
 title: Participant Accounts
 ---
 
-If students are participating in KlickerUZH activities for the first time, they can register for a **KlickerUZH participant account**. A KlickerUZH participant account allows them to easily **manage** and **access** the learning content of courses using KlickerUZH, as well as to add important elements to their **private repetition library** and participate in the **gamified elements** of courses.
+If students are participating in KlickerUZH activities for the first time, they can register for a **KlickerUZH participant account**. A KlickerUZH participant account allows them to easily manage and access the learning content of courses using KlickerUZH, as well as to add important elements to their **private repetition library** and participate in the **gamified elements** of courses.
 
 Depending on the technical set up of the course, students can proceed as follows:
 
@@ -12,7 +12,7 @@ Open the KlickerUZH module in the **OLAT course** of the lecture. To manage thei
 
 ![](/img_v3/01_create_account.png)
 
-If students already possess a KlickerUZH account, they can simply visit any of the KlickerUZH activities in the LMS course and should be **logged in automatically**. In case they are not logged in automatically, it is possible to log in using the button on the **top right**.
+If students already possess a KlickerUZH account, they can simply visit any of the KlickerUZH activities in the LMS course and should be **logged in automatically**. In case they are not logged in automatically, it is possible to log in using the button on the top right.
 
 ## Courses without LMS integration
 
@@ -33,6 +33,6 @@ In general, it is also possible to participate **anonymously** in most elements 
 
 ## Updating the account
 
-After creation, students can update their **password**, **avatar** and other **settings** at any time or **delete their account** completely through a corresponding designated view. To access this view, students can simply click on their avatar in the **top right corner**.
+After creation, students can update their **password**, **avatar** and other **settings** at any time or **delete their account** completely through a corresponding designated view. To access this view, students can simply click on their avatar in the top right corner.
 
 ![](/img_v3/02_edit_profile.png)
