--- a/apps/docs/docs/tutorials/course_management.mdx
+++ b/apps/docs/docs/tutorials/course_management.mdx
@@ -26,21 +26,19 @@ Courses serve as a framework within KlickerUZH, facilitating the integration of 
   title="KlickerUZH - Course Preparation"
 ></iframe>
 
-1. Starting from the **Courses page**, you can create a **new course**. The **Course Name** and **Display Name** can be the same or different. The Course Name is only visible internally for your identification, while the Display Name is what **participants will see**. For courses associated with a lecture or LMS course, using the **same name** is recommended.
+1. Starting from the Courses page, you can create a **new course**. The **Course Name** and **Display Name** can be the same or different. The Course Name is only visible internally for your identification, while the Display Name is what participants will see. For courses associated with a lecture or LMS course, using the **same name** is recommended.
 
-2. The **Description field** is visible to participants and can include course objectives. You can also embed an **image overview** of all course activities, helping students understand expectations and point-earning opportunities.
+2. The **Description field** is visible to participants and can include course objectives. You can also embed an image overview of all course activities, helping students understand expectations and point-earning opportunities.
 
 3. The **course color** can be adjusted to match the color used in the Learning Management System (LMS), if applicable.
 
-4. **Gamification** is enabled by default but can be deactivated. When active, participants can join the course and collect points, displayed on **live quiz and course leaderboards**.
+4. Gamification is enabled by default but can be deactivated. When active, participants can join the course and collect points, displayed on **live quiz and course leaderboards**.
 
 5. With gamification enabled, **group creation** is also enabled by default. Deactivating this prevents students from creating groups and you from creating group activities. This setting can be activated later on the course overview. If enabled, you must define the **creation deadline**, **maximum group size**, and **preferred group size**. For detailed explanations, refer to tooltips or the documentation on [randomized group creation](/tutorials/course_management/#randomized-student-groups).
 
-After creation, you'll be directed to the **course overview page**.
+After creation, you'll be directed to the course overview page. To access the course overview later, navigate to the courses section and select the desired course. From there, you can **start learning activities**, access **ongoing Live Quizzes**, and review **evaluations of past Live Quizzes**. You can also generate **access links** for specific Practice Quizzes and Microlearning.
 
-To access the course overview later, navigate to the **Courses section** and select the desired course. From there, you can **start learning activities**, access **ongoing Live Quizzes**, and review **evaluations of past Live Quizzes**. You can also generate **access links** for specific Practice Quizzes and Microlearning.
-
-To modify an existing course, go to the course overview page and click the **'Modify course' button** in the top right corner. Note which settings can or cannot be changed after initial setup – this information is available in the **tooltip** next to each input field.
+To modify an existing course, go to the course overview page and click the 'Modify course' button in the top right corner. Note which settings can or cannot be changed after initial setup – this information is available in the tooltip next to each input field.
 
 ## How can I join a course as a participant?
 
@@ -60,35 +58,35 @@ To modify an existing course, go to the course overview page and click the **'Mo
   title="KlickerUZH - Join Course"
 ></iframe>
 
-There are **three ways** to grant participants access to a course. By clicking on "**Join Course**" in the top right corner, the options for joining can be accessed:
+There are three ways to grant participants access to a course. By clicking on "**Join Course**" in the top right corner, the options for joining can be accessed:
 
-1. **Course Link**: Participants can access the course by clicking on "**Join Course**" located at the top right corner.
-2. **PIN**: Participants can enter a course by entering the **PIN code** provided.
-3. **QR Code**: To share the QR code, you can either click on "**Present QR code**" and **copy the link** (recommended) or take a **screenshot** of the QR code and share it.
+1. **Course Link**: Participants can access the course by clicking on "Join Course" located at the top right corner.
+2. **PIN**: Participants can enter a course by entering the PIN code provided.
+3. **QR Code**: To share the QR code, you can either click on "Present QR code" and copy the link (recommended) or take a screenshot of the QR code and share it.
 
 Participants also have the option to participate in activities **anonymously** without logging in.
 
 ## (Randomized) Student Groups
 
-If group creation has been enabled for the specific course, students can create groups with their peers by simply providing a **name** for the group and selecting the corresponding action. The students' peers can then join their group through the **PIN** provided on the group overview page.
+If group creation has been enabled for the specific course, students can create groups with their peers by simply providing a name for the group and selecting the corresponding action. The students' peers can then join their group through the **PIN** provided on the group overview page.
 
-The **randomized group creation** feature in KlickerUZH simplifies the process of forming student groups in **large courses**, especially when students may not know their peers. This feature is available for all **gamified courses** that have group formation enabled. Instead of manually creating or joining a group, students can opt to be **randomly assigned** to a group with others who have also chosen this option.
+The **randomized group creation** feature in KlickerUZH simplifies the process of forming student groups in large courses, especially when students may not know their peers. This feature is available for all **gamified courses** that have group formation enabled. Instead of manually creating or joining a group, students can opt to be randomly assigned to a group with others who have also chosen this option.
 
 This process helps ensure that groups are formed **fairly and efficiently**. The system automatically creates new groups **each day** and finalizes the process at the **group creation deadline** set by the lecturer, after which no further groups can be created and no changes to existing groups can be made anymore. The following steps must be completed to use the randomized group creation feature in KlickerUZH:
 
-1. **Enable group creation**: Ensure that the group creation feature is enabled for your course. If you haven't enabled it during the course creation, you can do so in the **course editor** on the course overview page.
+1. **Enable group creation**: Ensure that the group creation feature is enabled for your course. If you haven't enabled it during the course creation, you can do so in the course editor on the course overview page.
 
-2. Have students select **randomized group assignment**: Students can opt to be randomly assigned to a group by selecting the option during the group formation process in the **student app**.
+2. Have students select **randomized group assignment**: Students can opt to be randomly assigned to a group by selecting the option during the group formation process in the student app.
 
 ![Random Group Creation - Student View](/img_v3/17_random_groups_student.png)
 
-3. **Automatic group creation** during the creation period: Groups are created automatically every day, as long as there are at least **twice the number of students** as the preferred group size in the pool. The **preferred group size** is determined during course creation and cannot be modified later. KlickerUZH will try to adhere to your preferred group size as much as possible.
+3. **Automatic group creation** during the creation period: Groups are created automatically every day, as long as there are at least twice the number of students as the preferred group size in the pool. The **preferred group size** is determined during course creation and cannot be modified later. KlickerUZH will try to adhere to your preferred group size as much as possible.
 
 4. Automatic group creation at the **deadline**: Once the group creation deadline is reached, KlickerUZH automatically finalizes all groups:
 
    1. Participants that are **alone** in a group are automatically added to the random assignment pool, while their group is resolved.
    2. Students remaining in the assignment pool are evenly distributed into **new groups** to match the preferred group size.
 
-5. **Manual group creation** during the creation period: Lecturers can manually finalize group assignments at any time through the course's **group overview page** (ahead of the group formation deadline). This allows you to use randomized group formation in a **single in-class session** instead of across a longer timespan. To do so, you can select the "**Assign random groups**" button within the group overview on the course page (screenshot below). This will close group creation and distribute students from the pool into existing groups as described in the previous step. To reopen group formation after manual finalization, lecturers can **extend the deadline** in the course settings.
+5. **Manual group creation** during the creation period: Lecturers can manually finalize group assignments at any time through the course's **group overview page** (ahead of the group formation deadline). This allows you to use randomized group formation in a single in-class session instead of across a longer timespan. To do so, you can select the "**Assign random groups**" button within the group overview on the course page (screenshot below). This will close group creation and distribute students from the pool into existing groups as described in the previous step. To reopen group formation after manual finalization, lecturers can **extend the deadline** in the course settings.
 
 ![Random Group Creation - Lecturer View](/img_v3/18_random_groups_lecturer.png)
